# tinyrtos

./: .gitignore  LICENSE  README.md  library.json  platformio.ini  run.sh
examples/gui/: common.h  platformio.ini  run.bat  run.sh
examples/gui/include/: dispatcher.h  framebuffer.h  primitives.h  scene.h
examples/gui/renderer/: CMakeLists.txt
examples/gui/renderer/include/: parser.h  renderer.h  serial.h
examples/gui/renderer/src/: main.c  parser.c  renderer.c  serial.c
examples/gui/src/: dispatcher.c  framebuffer.c  main.c  primitives.c  scene.c
examples/nucleo_f756zg_osi/: platformio.ini
examples/nucleo_f756zg_osi/src/: main.c
examples/osi/: run.sh
examples/osi/src/: main.c
include/tinyrtos/bsp/f756zg/: led.h  usart3.h
include/tinyrtos/kernel/: kernel.h  port.h  scheduler.h  task.h
include/tinyrtos/osi/: osi.h
lib/bsp/f756zg/: led.c  led.h  usart3.c  usart3.h
lib/kernel/: fault.c  fault.h  kernel.c  kernel.h  mutex.c  mutex.h  port.c  port.h  queue.c  queue.h  scheduler.c  scheduler.h  semaphore.c  semaphore.h  task.c  task.h
lib/osi/: osi.c  osi.h
src/: main.c
src/bsp/f756zg/: led.c  usart3.c
src/kernel/: fault.c  kernel.c  mutex.c  port.c  queue.c  scheduler.c  semaphore.c  task.c
src/osi/: osi.c
